# taichu

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  RAG方案学习页.html  README.md  TAICHU_DESIGN.md  import_taichu_dogfood_3chapters.py  main.py  pyproject.toml  start.bat  产品设计文档.md  太初开发态执行流.md
.agents/skills/: rule.md
.agents/skills/discuss/: SKILL.md
.agents/skills/taichu-acceptance-brief/: SKILL.md
.agents/skills/taichu-git-publish/: SKILL.md
.agents/skills/taichu-task-package-execution/: SKILL.md
.agents/skills/taichu-ui-components/: SKILL.md
.agents/taskpacks/taichu_entry_codex_task/: 00_README.md  01_CODEX_PROMPT.md  02_VISUAL_SPEC.md  03_TECH_SPEC.md  04_POINT_CLOUD_GENERATION.md  05_ACCEPTANCE_CHECKLIST.md  06_REFERENCE_NOTES.md
.agents/taskpacks/taichu_frontend_style_taskpack_mvp01_2026-06-27/: CODEX_MASTER_PROMPT.md  README.md  STYLE_AUDIT.md  (+2 more)
.claude/: settings.json  settings.local.json
.claude/changelog/: v0.1.md  v0.2.md
.claude/management/: PROJECT_ARCHITECTURE.md
.claude/rules/: FRONTEND_STANDARDS.md  PYTHON_CODING_STANDARDS.md
.claude/skills/: Changelog.md  rule.md
docs/: rule.md  前端风格切换任务.md  后端代码说明.md  太初前端视觉冻结说明.md  太初旧版前端设计已废弃.md
docs/learn/: MVP0.1后端功能学习指南.md  后端代码说明.md
docs/releases/: 太初最小可用版零点一候选一发布说明.md
frontend/: app.py
project_assets/source/: metadata.yaml
src/taichu/: config.py  main.py
tests/: __init__.py
web/: package-lock.json  package.json  tsconfig.tests.json
产品文档/: MVP功能改版.md  MVP范围.md  MVP迭代规则与LLM边界补充.md  一致性与审查.md  产品定位与交互.md  内容优化.md  内容生成.md  写作页面.md  扩展功能.md  架构设计.md  知识库.md  结构与规划.md
(+295 files in other folders)
