[project]
name = "taichu"
version = "0.1.0"
description = "太初 - 玄幻小说个人写作助手，基于 LangGraph 的多 Agent 写作系统"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0",
    "langchain>=1.0",
    "langchain-openai>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
]

[project.scripts]
taichu = "taichu.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taichu"]
